# torch-to-any

./: .pre-commit-config.yaml  CHANGELOG.md  Dockerfile  README.md  constraints.txt  justfile  pyproject.toml  requirements.txt
notebooks/: convert_torch_model.ipynb
src/torch_to_any/: __init__.py  __main__.py  cli.py  logger.py  modeling.py  onnx_ops.py  scripts.py
src/torch_to_any/logger/: logger.py
src/torch_to_any/modeling/: __init__.py  models.py
src/torch_to_any/ops/: __init__.py  base.py  onnx.py  torchscript.py
tasks/: check.just
tests/: test_cli.py  test_models.py  test_scripts.py
